Change all the names of everythin on Spanish to English
